crates/analyzer/tests/snapshots/errors__ctx_not_first.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: invalid parameter order
  ┌─ compile_errors/ctx_not_first.fe:4:27
  │
4 │     pub fn bar(baz: u256, ctx: Context) {}
  │                           ^^^^^^^^^^^^ `ctx: Context` must be the first parameter


